k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubesight-frontend
  namespace: kubesight
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubesight-frontend
  template:
    metadata:
      labels:
        app: kubesight-frontend
    spec:
      containers:
        - name: frontend
          # Build: docker build -t kubesight-frontend:v1 ./frontend
          image: kubesight-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: kubesight
spec:
  type: ClusterIP
  selector:
    app: kubesight-frontend
  ports:
    - port: 80
      targetPort: 80
